<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="default_url">file://trace.log</string>
    <string name="app_name">GPS Emitter</string>
    <string name="settings">settings</string>
    <string name="history">historical</string>
    <string name="clear_history">clear the historical</string>
    <string name="push_history">upload the historical</string>
    <string name="pushing_history">uploading elements</string>
    <string name="push_history_summary">synchronize the database …</string>
    <string name="geolocation">service of geolocation</string>
    <string name="update_location_service">enable the service</string>
    <string name="update_location_service_summary">enable the geolocation service</string>
    <string name="perso_informations">informations</string>
    <string name="my_identity">the device ID</string>
    <string name="my_identity_summary">ID used to identify the device</string>
    <string name="running">options</string>
    <string name="stop_on_low_battery">stop on low battery</string>
    <string name="stop_on_low_battery_summary">stop the service when the battery is low</string>
    <string name="start_on">launch the service</string>
    <string name="stop_on">stop the service</string>
    <string name="start_stop">start/stop</string>
    <string name="start_on_summary">condition to launch the service</string>
    <string name="provider">choice of provider</string>
    <string name="provider_summary">choice between materials to provide the position</string>
    <string name="min_time">time interval</string>
    <string name="min_time_summary">time between two wake of service</string>
    <string name="wake_up">wake of service</string>
    <string name="wake_up_summary">wake of service at regular intervals</string>
    <string name="no_provider_found">no provider found</string>
    <string name="url">recipient</string>
    <string name="url_summary">sms://+336.. or file://trace.log or http://</string>
    <string name="clear_preferences">reset preferences</string>
    <string name="upload_cellid">captures phone cells</string>
    <string name="upload_cellid_summary">captures the informations of cell towers</string>
    <string name="upload_wifi">captures hotspots wifi</string>
    <string name="upload_wifi_summary">captures informations of hotspots wifi</string>
    <string name="upload_ipinfo">captures IP informations</string>
    <string name="upload_ipinfo_summary">captures the informations of your current IP(s)</string>
    <string name="upload_if_network">upload datas if available</string>
    <string name="upload_if_network_summary">upload datas when the network is available</string>
    <string name="provider_not_currently_enabled">you need to enable this provider to get a location</string>
    <string name="need_to_reload_manually">settings are changed, do you want to reload the emitter?</string>
    <string name="version">release</string>
    <string name="alarm">alarm</string>
    <string name="display_notif">display notifications</string>
    <string name="display_notif_summary">displays notifications during location updates</string>
    <string name="location_changed">location changed</string>
    <string name="location_requested">location requested</string>
    <string name="return_last_pos">return the last position</string>
    <string name="return_last_pos_summary">ask to the server to return the last position saved</string>
    <string name="gps_provider_is_needed">to use this feature, GPS provider need to be present and activated</string>
    <string name="command_by_sms">command by SMS</string>
    <string name="command_by_sms_summary">allows receiving a command by SMS</string>
    <string name="command_received">commands received from %s</string>
    <string name="from_server">server</string>
    <string name="capture">capture</string>
    <string name="capture_summary">captures complementary informations</string>
    <string name="command_by_sms_caution">activating of the orders by sms allowss activation of remote service</string>
    <string name="battery_level">captures the battery level</string>
    <string name="battery_level_summary">captures the level of the phone battery</string>
    <string name="telephony_signal">captures the signal level</string>
    <string name="telephony_signal_summary">captures the signal level displayed</string>
    <string name="version_display">captures additional information</string>
    <string name="version_display_summary">catch the model number and version of the phone</string>
    <string name="energy_caution">the screen of your phone lights to on each position request, and consumes more energy</string>
    <string name="please_wait">please wait…</string>
    <string name="deleted">%s element(s) deleted</string>
    <string name="iteration">attempts</string>
    <string name="iteration_summary">number of attempts before stopping the service</string>
    <string name="start_on_boot">starts on boot</string>
    <string name="start_on_boot_summary">launch the service when the device is booted</string>
    <string name="start_on_gps">starts on GPS reception</string>
    <string name="start_on_gps_summary">launch the service when receiving a GPS fix</string>
    <string name="start_on_wifi">starts on wifi connection</string>
    <string name="start_on_wifi_summary">launch the service when the device is connected on a wifi hotspot</string>
    <string name="start_on_mobile">starts on mobile network connection</string>
    <string name="start_on_mobile_summary">launch the service when the device is connected on the network mobile</string>
    <string name="start_on_power_disconnected">starts on power disconnected</string>
    <string name="start_on_power_disconnected_summary">launch the service when the power is unplugged</string>
    <string name="start_on_power_connected">starts on power connected</string>
    <string name="start_on_power_connected_summary">launch the service when the power is plugged</string>
    <string name="upload">upload</string>
    <string name="upload_summary">upload datas according events</string>
    <string name="upload_on_connection">upload on network connection</string>
    <string name="upload_on_connection_summary">upload datas when the device connects to the network</string>
    <string name="db_currently_locked">the database is currently locked, please try again.</string>
    <string name="infinite">infinite</string>
    <string name="crash_toast_text">an error appened, a crash report is sent to the server</string>
    <string name="delete_element">delete</string>
    <string name="reset_element">reset</string>
    <string name="deletion">deletion …</string>
    <string name="reseted">reseted …</string>
    <string name="database">database</string>
    <string name="database_size">revision %1$d / %2$s / %3$s availables</string>
    <string name="database_deletion">deletion the database ?</string>
    <string name="error_during_opening_histories">unable to diplay the datas.</string>
    <string name="delete_after_upload">delete after upload</string>
    <string name="delete_after_upload_summary">removes the data to the database after sending the data to the server with success</string>
    <string name="no_data">no data</string>
    <string name="confirm_deletion">Delete the data ?</string>
    <string name="confirm_reset">Reset the phone ?</string>
    <string name="in_out">in: %1$s b - out: %2$s b</string>
    <string name="with_radius">captures the accuracy of the position</string>
    <string name="with_radius_summary">captures the accuracy, need a compatible server</string>
    <string name="force_send">optional position</string>
    <string name="force_send_summary">if no position is found after a time, the information are uploaded to the server</string>
    <string name="timeout">delay</string>
    <string name="timeout_summary">delay before sending the selected position</string>
    <string name="force_agps">forces the A-GPS refresh</string>
    <string name="force_agps_summary">Internet is needed. Allows to accurate the GPS position.</string>
    <string name="posted_position">new position from %s</string>
    <string name="posted_position_with_panicbutton">panic button from %s</string>
    <string name="admin_menu">add password</string>
    <string name="reset">Reset</string>
    <string name="privacy_mode_switched_on">privacy mode activated</string>
    <string name="privacy_mode_switched_off">privacy mode deactivated</string>
    <string name="inform_privacy_summary">sending a frame informing the deactivation of the service (from private mode)</string>
    <string name="inform_privacy">inform the deactivation of the service</string>
    <string name="start_on_geoloc_enable">starts on enabling the service</string>
    <string name="start_on_geoloc_enable_summary">starts the application for positions when the service is activated</string>
    <string name="display_on_off_summary">displays an icon in the notification bar corresponding to the state of the service</string>
    <string name="display_on_off">display the state of the service</string>
    <string name="watch_element">share</string>
    <string name="no_position">no position</string>
    <string name="time">date</string>
    <string name="altitude">altitude</string>
    <string name="speed">speed</string>
    <string name="number_of_sat">number of sat.</string>
    <string name="accuracy">accuracy</string>
    <string name="start_service">starts the service now</string>
    <string name="start_service_summary">launch the service with the specific configuration</string>
    <string name="geofencing">geofencing</string>
    <string name="start_on_geofencing">starts by geofencing</string>
    <string name="start_on_geofencing_summary">launch according to a geographical area</string>
    <string name="start_geofencing">start</string>
    <string name="radius">radius:</string>
    <string name="geofencing_in">entry</string>
    <string name="geofencing_out">exit</string>
    <string name="stopped_geofencing">the geofencing is stopped</string>
    <string name="stop_geofencing">click here to stop the geofencing</string>
    <string name="enabled">service enabled</string>
    <string name="disabled">service disabled</string>
    <string name="display_item">more details ?</string>
    <string name="sdcard_not_available">sdcard is not available</string>
    <string name="service_status_is">the geolocation is</string>
    <string name="status_enabled">enabled</string>
    <string name="status_disabled">disabled</string>
    <string name="my_id_is">the device ID is</string>
    <string name="provider_used_is">the provider used is</string>
    <string name="timer_choice">choose a timer</string>
    <string name="dest_choice">choose destination</string>
    <string name="timer_repetition">repeat every %1$s</string>
    <string name="timer_hour">hours</string>
    <string name="timer_minute">minutes</string>
    <string name="enable_service">enable</string>
    <string name="disable_service">disable</string>
    <string name="panic_button">actuating a panic button</string>
    <string name="update_location_success">position is updated</string>
    <string name="update_location_warning">warning in the processing of the position</string>
    <string name="update_location_error">error in the processing of the position</string>
    <string name="update_location_unknown">unknown state in the processing of the position</string>
    <string name="awaiting_transfer">awaiting transfer</string>

</resources>