<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/radius"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/display_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/radius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="5000"
            android:progress="300" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/geofencing_out"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/geofencing_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geofencing_in" />

            <RadioButton
                android:id="@+id/geofencing_out"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/geofencing_out" />
        </RadioGroup>

        <Button
            android:id="@+id/start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_geofencing" />
    </LinearLayout>

</RelativeLayout>